--- a/index.html
+++ b/index.html
@@ -3,33 +3,133 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>便利になるかも知れないツール</title>
+    <title>mayholiholi</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>便利になるかもしれないツール</h1>
-        <p>ド素人が思いつきで作ってます。</p>
-        <ul>
-            <li>
-                <a href="https://dekaiinunadenade.github.io/solo-random-odai/" target="_blank">Solo Random Odai</a><br>
-                <span>ランダムにお題を生成するツール。</span>
-            </li>
-            <li>
-                <a href="https://mayholiholi.github.io/search-link-generator/" target="_blank">Search Link Generator</a><br>
-                <span>指定されたキーワードに基づいてリンクを生成するツール。</span>
-            </li>
-            <li>
-                <a href="https://come-to-my-nagaya-ronin-tool.onrender.com">長屋に来てくれ！</a><br>
-                <span>ローニンでキャラの好物を見やすくリストアップする非公式ツール。</span>
-            </li>
-        </ul>
-    </div>
+    <div class="bg-glow"></div>
+
+    <header>
+        <div class="hero">
+            <img id="avatar" src="" alt="mayholiholiのアバター" class="avatar">
+            <h1 id="username">mayholiholi</h1>
+            <p id="bio" class="bio">便利になるかもしれないツール</p>
+            <div class="hero-links">
+                <a href="https://github.com/mayholiholi" target="_blank" class="hero-link">
+                    <svg viewBox="0 0 16 16" width="18" height="18" fill="currentColor"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/></svg>
+                    GitHub
+                </a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjgkBdGJUOrtgrmCQOozLJCW9tzA2JGTQVhjYrUVZ6d_qszA/viewform?usp=sf_link" target="_blank" class="hero-link">
+                    <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
+                    連絡先
+                </a>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <h2 class="section-title">Projects</h2>
+        <div id="repos" class="card-grid">
+            <div class="loading">
+                <div class="spinner"></div>
+                <span>リポジトリを取得中...</span>
+            </div>
+        </div>
+    </main>
+
     <footer>
-        <p>
-            GitHubアカウント（<a href="https://github.com/mayholiholi" target="_blank">mayholiholi</a>）何かあれば → 
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfjgkBdGJUOrtgrmCQOozLJCW9tzA2JGTQVhjYrUVZ6d_qszA/viewform?usp=sf_link" target="_blank">連絡先</a>
-        </p>
+        <p>&copy; mayholiholi</p>
     </footer>
+
+    <script>
+        const USERNAME = 'mayholiholi';
+        const CUSTOM_META = {};
+
+        async function fetchProfile() {
+            try {
+                const res = await fetch(`https://api.github.com/users/${USERNAME}`);
+                if (!res.ok) throw new Error(`HTTP ${res.status}`);
+                const user = await res.json();
+                document.getElementById('avatar').src = user.avatar_url;
+                document.getElementById('username').textContent = user.name || user.login;
+                if (user.bio) document.getElementById('bio').textContent = user.bio;
+            } catch (e) {
+                console.error('プロフィール取得エラー:', e);
+                document.getElementById('avatar').style.display = 'none';
+            }
+        }
+
+        function langColor(lang) {
+            const colors = {
+                JavaScript: '#f1e05a', HTML: '#e34c26', CSS: '#563d7c',
+                Python: '#3572A5', TypeScript: '#3178c6', Vue: '#41b883',
+                Shell: '#89e051', Java: '#b07219', Go: '#00ADD8',
+            };
+            return colors[lang] || '#8b949e';
+        }
+
+        function escapeHtml(str) {
+            const div = document.createElement('div');
+            div.textContent = str;
+            return div.innerHTML;
+        }
+
+        async function fetchRepos() {
+            const container = document.getElementById('repos');
+            try {
+                const res = await fetch(`https://api.github.com/users/${USERNAME}/repos?sort=updated&per_page=100`);
+                if (res.status === 403 || res.status === 429) {
+                    container.innerHTML = '<p class="empty">GitHub APIのレート制限に達しました。しばらく待ってから再読み込みしてください。</p>';
+                    return;
+                }
+                if (!res.ok) throw new Error(`HTTP ${res.status}`);
+                const repos = await res.json();
+                container.innerHTML = '';
+
+                const filtered = repos.filter(r => !r.fork && r.name !== `${USERNAME}.github.io`);
+
+                if (filtered.length === 0) {
+                    container.innerHTML = '<p class="empty">リポジトリが見つかりませんでした。</p>';
+                    return;
+                }
+
+                filtered.forEach((repo, i) => {
+                    const meta = CUSTOM_META[repo.name] || {};
+                    const owner = meta.org || USERNAME;
+                    const hasPages = meta.pages || repo.has_pages;
+                    const pagesUrl = hasPages ? `https://${owner}.github.io/${repo.name}/` : null;
+                    const lang = repo.language || '';
+
+                    const card = document.createElement('div');
+                    card.className = 'card';
+                    card.style.animationDelay = `${Math.min(i * 0.08, 1.6)}s`;
+
+                    const safeName = escapeHtml(repo.name);
+                    const safeDesc = escapeHtml(repo.description || '説明なし');
+                    const safeLang = escapeHtml(lang);
+
+                    card.innerHTML = `
+                        <div class="card-top">
+                            <span class="repo-name">${safeName}</span>
+                            ${lang ? `<span class="lang"><span class="lang-dot" style="background:${langColor(lang)}"></span>${safeLang}</span>` : ''}
+                        </div>
+                        <p class="card-desc">${safeDesc}</p>
+                        <div class="card-actions">
+                            ${pagesUrl ? `<a href="${escapeHtml(pagesUrl)}" target="_blank" class="btn btn-primary">Open App</a>` : ''}
+                            <a href="${escapeHtml(repo.html_url)}" target="_blank" class="btn btn-ghost">GitHub</a>
+                        </div>
+                        <span class="card-date">更新 ${new Date(repo.updated_at).toLocaleDateString('ja-JP')}</span>
+                    `;
+                    container.appendChild(card);
+                });
+            } catch (e) {
+                console.error('リポジトリ取得エラー:', e);
+                container.innerHTML = '<p class="empty">読み込みに失敗しました。ページを再読み込みしてください。</p>';
+            }
+        }
+
+        fetchProfile();
+        fetchRepos();
+    </script>
 </body>
 </html>
